# customer-service-agents-openenv

./: Dockerfile  README.md  __init__.py  client.py  customer_service_env.py  debug_env.py  inference.py  login_hf.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: __init__.py  graders.py  scenarios.py
tools/: __init__.py  base.py  data.py
