[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-service-agents-openenv"
version = "0.1.0"
description = "Customer Service Agents environment for Meta OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openenv-core>=0.0.1",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "huggingface_hub>=0.17.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]
